--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,23 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+input, a{
+  display: block;
+  outline: none;
+  cursor: pointer;
+}
+
+#root{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
