--- a/src/user-list/userList.scss
+++ b/src/user-list/userList.scss
@@ -1,3 +1,20 @@
+.all-users{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .user {
   display: flex;
+  max-width: 500px;
+  width: 100%;
+  padding: 10px;
+  font-size: 20px;
+  
+
+  &__data{
+      display: flex;
+  }
 }
