--- a/src/user-list/userList.scss
+++ b/src/user-list/userList.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  margin-bottom: 40px;
   a{
     width: 100%;
   }
@@ -23,10 +23,22 @@
   justify-content: center;
   align-items: center;
   margin:5px auto;
+  transition: all ease-in-out 0.3s;
+
+  &:hover{
+    background: brown;
+    .user__data{
+      color: white;
+    }
+
+  }
   
   &__data{
       display: flex;
       padding: 25px;
+      color: blue;
+
+      
   }
 
   &__delete-btn{
@@ -36,6 +48,27 @@
     cursor: pointer;
     font-weight: bold;
     padding: 2px;
+    transition: all ease-in-out .3s;
+     &:hover{
+       color: white;
+       transform: rotate(90deg);
+     }
   }
+}
 
+.nav-btns{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .btn{
+    margin: 15px;
+    width: 100px;
+    height: 50px;
+    font-size: 30px;
+    background: cornflowerblue;
+    
+  }
+  .cur{
+    font-size: 50px;
+  }
 }
