--- a/src/create-user/CreateUser.scss
+++ b/src/create-user/CreateUser.scss
@@ -32,10 +32,20 @@
       margin: 0 auto;
       max-width: 200px;
       width: 100%;
-      height: 30px;
+      height: 40px;
       border: 1px solid black;
       background: burlywood;
       border-radius: 50px;
       align-self: start;
+      transition: all ease-in-out .3s;
+      font-size: 20px;
+ 
+
+      &:hover{
+        background: brown;
+        color: white;
+        font-weight: bold;
+        font-size: 30px;
+      }
     }
 }
